--- a/dirAndFiles/5.ipynb
+++ b/dirAndFiles/5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
     "            file.write(item + \"\\n\")\n",
     "    print(\"+\")\n",
     "except Exception as e:\n",
-    "    print(f\"An error occurred: {e}\")\n"
+    "    print(\"Ошибка\")\n"
    ]
   }
  ],
