--- a/dirAndFiles/1.ipynb
+++ b/dirAndFiles/1.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'os' has no attribute 'listfile'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      5\u001b[0m direct \u001b[38;5;241m=\u001b[39m [d \u001b[38;5;28;01mfor\u001b[39;00m d \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(path) \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misdir(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path, d))]\n\u001b[1;32m----> 6\u001b[0m files \u001b[38;5;241m=\u001b[39m [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistfile\u001b[49m(path) \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path, f))]\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mall\u001b[39m \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mlistdir(path)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(direct)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'os' has no attribute 'listfile'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Custom Office Templates', 'Electronic Arts', 'GTA San Andreas User Files', 'League of Legends', 'my games']\n",
+      "['desktop.ini', 'first.pbix', 'I. Meldebek.pdf', 'Islam Meldebek.docx', 'powerbi.pbix', 'sample-data.json', 'Документ.docx']\n",
+      "['Custom Office Templates', 'desktop.ini', 'Electronic Arts', 'first.pbix', 'GTA San Andreas User Files', 'I. Meldebek.pdf', 'Islam Meldebek.docx', 'League of Legends', 'my games', 'powerbi.pbix', 'sample-data.json', 'Документ.docx']\n"
      ]
     }
    ],
